--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
     "@trpc/client": "^11.0.0",
-    "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@trpc/tanstack-react-query": "^11.1.2",
     "drizzle-orm": "^0.41.0",
     "next": "^15.2.3",
     "postgres": "^3.4.4",
