--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@clerk/elements": "^0.23.27",
     "@clerk/nextjs": "^6.19.4",
     "@clerk/themes": "^2.2.45",
     "@hookform/resolvers": "^5.0.1",
