feat: add creating regular posts

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 DATABASE_URL="postgresql://postgres:password@localhost:5432/editorverse"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk
 CLERK_SECRET_KEY=sk
+B2_KEY_ID=000
+B2_APP_KEY=K00
+B2_BUCKET=name-region-num
+B2_ENDPOINT=s3.region-num.backblazeb2.com
