--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@clerk/themes": "^2.2.45",
     "@hookform/resolvers": "^5.0.1",
     "@neondatabase/serverless": "^1.0.0",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-hover-card": "^1.1.14",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.9",
@@ -49,11 +51,13 @@
     "lucide-react": "^0.510.0",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
+    "next-video": "^2.2.0",
     "p-limit": "^6.2.0",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
+    "react-intersection-observer": "^9.16.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.3",
     "superjson": "^2.2.1",
