--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "drizzle-zod": "^0.8.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.510.0",
+    "mailgun.js": "^12.0.2",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
     "next-video": "^2.2.0",
